package edu.hitsz.prop;


public interface AbstractPropFactory {
     AbstractProp createProp(int locationX, int locationY, int speedX, int speedY);

}
